fix(test): update WishlistServiceImplTest to match current WishlistServiceImpl
- Remove stale WishlistMapper mock (service uses private toDto())
- Add ProductRepository mock (service calls productRepository.findById)
- Fix repository method names: _PublicId → _Id for product navigation
- Fix userRepository.findByPublicId (was findById)
- Fix productRepository.findById (was findByPublicId)
- Fix getWishlistSummary test: mock findByUser_PublicIdOrderByCreatedAtDesc
  and assert totalItems == 0 to match actual service behavior